<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codepath.apps.SimpleTwitter.activities.TimelineActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="5"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_messages"
        android:icon="@drawable/ic_message"
        android:orderInCategory="6"
        android:title="@string/message"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="7"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/ic_compose"
        android:orderInCategory="100"
        android:title="@string/action_compose"
        app:showAsAction="always" />
    <item
        android:id="@+id/miActionProgress"
        android:orderInCategory="200"
        android:title="Loading..."
        android:visible="false"
        app:actionLayout="@layout/action_view_progress"
        app:showAsAction="always" />
</menu>
