<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.SimpleTwitter.fragments.SendMessageFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sender"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/minMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etRecipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterRecipient"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/body"
        android:layout_alignEnd="@+id/sender"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/sender"
        android:layout_below="@id/sender"
        android:gravity="top"
        android:layout_margin="@dimen/minMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/enterReply"
            android:minHeight="@dimen/thumbnailHeight" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/body"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/viewMargin"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textSize="@dimen/activity_vertical_margin"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tvSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/send"
            android:textStyle="bold"
            android:textSize="@dimen/activity_vertical_margin"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</RelativeLayout>
